<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgAddressClose"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/black" />


            <TextView
                android:id="@+id/tvPaymentMethods"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/poppins_thin"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imgAddressClose"
                app:layout_constraintStart_toEndOf="@id/imgAddressClose"
                app:layout_constraintTop_toTopOf="@+id/imgAddressClose" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>


    <View
        android:id="@+id/topLine"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/white_background"
        android:backgroundTint="@color/g_blue_gray200"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/toolbarAddress" />

    <EditText
        android:id="@+id/etAddressTitle"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="@string/location"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/topLine" />

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="@string/full_name"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/etAddressTitle" />

    <EditText
        android:id="@+id/etStreet"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="@string/street"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/etFullName" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="0.484"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/etPhone">

        <EditText
            android:id="@+id/etCity"
            android:layout_width="378dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/btn_white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="start|center_vertical"
            android:hint="@string/city"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etState"
            android:layout_width="378dp"
            android:layout_height="45dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:background="@drawable/btn_white_background"
            android:fontFamily="@font/poppins_light"
            android:gravity="start|center_vertical"
            android:hint="@string/state"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:textStyle="bold" />

    </LinearLayout>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/btn_white_background"
        android:fontFamily="@font/poppins_light"
        android:gravity="start|center_vertical"
        android:hint="@string/phone"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:phoneNumber="true"
        android:singleLine="true"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline1"
        app:layout_constraintTop_toBottomOf="@+id/etStreet" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintVertical_bias="0.494">


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/white_background"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/delete"
            android:textAllCaps="false"
            android:textColor="@color/g_gray700"
            android:textSize="12sp"
            android:visibility="visible" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSave"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="@drawable/blue_background"
            android:fontFamily="@font/poppins_thin"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="12sp"
            android:visibility="visible" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progressBarAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:indeterminateTint="@color/g_gray700"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@id/guideline2"
        app:layout_constraintStart_toStartOf="@id/guideline1"
        app:layout_constraintTop_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>